gcc/testsuite/gcc.dg/noncompile/pr52290.c
/* { dg-error "undeclared here" "undeclared" { target *-*-* } .+2 } */
/* { dg-error "expected" "expected" { target *-*-* } .+1 } */
int f()[j]
